$Id$                       -*-text-*-


**** 1.01 [unreleased]

Feature
	The RRs previously only available with Net::DNS::SEC are now
	integrated with Net::DNS.  Net::DNS::SEC needs to be installed
	to enable the signature generation and verification functions.

Fix rt.cpan.org #105421

	Dead link in Net::DNS::FAQ

Fix rt.cpan.org #104657

	Wrong split on Cygwin

Fix rt.cpan.org #101810

	Dynamic update: rr_add overrides ttl of zero

Fix rt.cpan.org #101809

	CAA broken


**** 0.83 Feb 26, 2015

Fix rt.cpan.org #101798

	AUTOLOAD error confusing w/o reference to object class

Fix rt.cpan.org #101709

	Provide separate control of IPv6 tests

Fix rt.cpan.org #101675

	MX record with 0 preference fails to parse

Fix rt.cpan.org #101405

	Install tests fail for v0.81 on Perl 5.21.7


**** 0.82 Jan 20, 2015

Fix rt.cpan.org #100385

	Support for IPv6 link-local addresses with scope_id


**** 0.81 Oct 29, 2014

Fix rt.cpan.org #99571

	AXFR BADSIG failures

Fix rt.cpan.org #99531

	Resolver doc error - when is a 'bug' a 'bug'? [TSIG verification]

Fix rt.cpan.org #99528

	TSIG::create fails with some filenames
	
Fix rt.cpan.org #99527

	Random errors... [declaration with statement modifier]

Fix rt.cpan.org #99429

	Infinite recursion in Net::DNS::Resolver::Recurse::send when
	following certain delegations with empty non-terminals.

Fix rt.cpan.org #99320

	Net::DNS::ZoneFile bug in "$ORIGIN ."


**** 0.80 Sep 22, 2014

Removal of Win32::IPHelper support with cygwin

	Resolvers on Cygwin can get their DNS configuration from the
	registry directly via the /proc filesystem.  Getting rid of
	the other method reduces dependencies and makes installations
	less error prone.

Rework rt.cpan.org #96119

	"Too late to run INIT block" warning for require Net::DNS
 

**** 0.79 Aug 22, 2014

Feature rt.cpan.org #98149

	Add support for Android platform.

Fix rt.cpan.org #97736

	Net::DNS::Resolver->new mistakenly copies supplied arguments